--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--Fact generator-->
     
     <div class="factGen">
-      <p class="buttonWords">Why do we need to talk about teen dating violence? Click on the Button to learn more.</p>
+      <p class="buttonWords">Why do we need to talk about teen dating violence? Click on the Button to clearn more.</p>
         <button id="factButton">FACTS on TDV</button>
       <p class="buttonWords">Then share it!</p>
     </div>
