--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p class="buttonWords">Then share it!</p>
     </div>
     
-    <h3 id="fact">.</h3>
+    <h3 class="fact">.</h3>
     <p>Statistics from <a href="https://www.dosomething.org/us/facts/11-facts-about-teen-dating-violence">DoSomething.org</a></p>
   
 
