--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <div class="factGen">
       <p class="buttonWords">Why do we need to talk about teen dating violence? Click on the Button to clearn more.</p>
-        <button id="factButton">FACTS on TDV</button>
+        <button class="factButton">FACTS on TDV</button>
       <p class="buttonWords">Then share it!</p>
     </div>
     
