--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     
     <div class="factGen">
       <p class="buttonWords">Why do we need to talk about teen dating violence? Click on the Button to clearn more.</p>
-        <button class="factButton">FACTS on TDV</button>
+        <button id="factButton">FACTS on TDV</button>
       <p class="buttonWords">Then share it!</p>
     </div>
     
-    <h3 class="fact">.</h3>
+    <h3 id="fact">.</h3>
     <p>Statistics from <a href="https://www.dosomething.org/us/facts/11-facts-about-teen-dating-violence">DoSomething.org</a></p>
   
 
