--- a/AboutMe.html
+++ b/AboutMe.html
@@ -38,7 +38,7 @@
 
     <main>
     <h3>Hi! I'm YJ Grace.</h3>
-    <p> I built this website during the summer of 2021 at Girls Who Code using html, css, and javascript. I choose the topic of teen dating violence and toxic relationship because abusive behaviors, especially in teenage relationships, are not talked about or viewed as seriously as adult relationships.</p>
+    <p> I built this website during the summer of 2021 at Girls Who Code using HTML, CSS, and Javascript. I choose the topic of teen dating violence and toxic relationship because abusive behaviors, especially in teenage relationships, are not talked about or viewed as seriously as adult relationships.</p>
 
     <p>Teenagers are at most risk for dating violence and abuse because they lack the experience or knowledge to recognize an unhealthy relationship (compared to an adult). Teen dating violence has affect a lot of people and can happen to anyone; it is a serious issue and people need to be able to recognize the warning signs and protect themselves.</p>    
 
